# ECE4760-ArduCAM-OV5642

./: README.md
cam_vga/: 2040camera.cpp  CMakeLists.txt
cam_vga/ArduCAM/: ArduCAM.cpp
